; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/omapdrm/dss/extr_dsi.c_dsi_get_channel.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/omapdrm/dss/extr_dsi.c_dsi_get_channel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dsi_data = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@OMAP_DSS_CHANNEL_LCD = common dso_local global i32 0, align 4
@OMAP_DSS_CHANNEL_LCD2 = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"unsupported module id\0A\00", align 1
@OMAP_DSS_CHANNEL_LCD3 = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [25 x i8] c"unsupported DSS version\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dsi_data*)* @dsi_get_channel to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dsi_get_channel(%struct.dsi_data* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.dsi_data*, align 8
  store %struct.dsi_data* %0, %struct.dsi_data** %3, align 8
  %4 = load %struct.dsi_data*, %struct.dsi_data** %3, align 8
  %5 = getelementptr inbounds %struct.dsi_data, %struct.dsi_data* %4, i32 0, i32 1
  %6 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  switch i32 %8, label %33 [
    i32 130, label %9
    i32 129, label %11
    i32 128, label %22
  ]

9:                                                ; preds = %1
  %10 = load i32, i32* @OMAP_DSS_CHANNEL_LCD, align 4
  store i32 %10, i32* %2, align 4
  br label %36

11:                                               ; preds = %1
  %12 = load %struct.dsi_data*, %struct.dsi_data** %3, align 8
  %13 = getelementptr inbounds %struct.dsi_data, %struct.dsi_data* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 8
  switch i32 %14, label %19 [
    i32 0, label %15
    i32 1, label %17
  ]

15:                                               ; preds = %11
  %16 = load i32, i32* @OMAP_DSS_CHANNEL_LCD, align 4
  store i32 %16, i32* %2, align 4
  br label %36

17:                                               ; preds = %11
  %18 = load i32, i32* @OMAP_DSS_CHANNEL_LCD2, align 4
  store i32 %18, i32* %2, align 4
  br label %36

19:                                               ; preds = %11
  %20 = call i32 @DSSWARN(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  %21 = load i32, i32* @OMAP_DSS_CHANNEL_LCD, align 4
  store i32 %21, i32* %2, align 4
  br label %36

22:                                               ; preds = %1
  %23 = load %struct.dsi_data*, %struct.dsi_data** %3, align 8
  %24 = getelementptr inbounds %struct.dsi_data, %struct.dsi_data* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 8
  switch i32 %25, label %30 [
    i32 0, label %26
    i32 1, label %28
  ]

26:                                               ; preds = %22
  %27 = load i32, i32* @OMAP_DSS_CHANNEL_LCD, align 4
  store i32 %27, i32* %2, align 4
  br label %36

28:                                               ; preds = %22
  %29 = load i32, i32* @OMAP_DSS_CHANNEL_LCD3, align 4
  store i32 %29, i32* %2, align 4
  br label %36

30:                                               ; preds = %22
  %31 = call i32 @DSSWARN(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  %32 = load i32, i32* @OMAP_DSS_CHANNEL_LCD, align 4
  store i32 %32, i32* %2, align 4
  br label %36

33:                                               ; preds = %1
  %34 = call i32 @DSSWARN(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.1, i64 0, i64 0))
  %35 = load i32, i32* @OMAP_DSS_CHANNEL_LCD, align 4
  store i32 %35, i32* %2, align 4
  br label %36

36:                                               ; preds = %33, %30, %28, %26, %19, %17, %15, %9
  %37 = load i32, i32* %2, align 4
  ret i32 %37
}

declare dso_local i32 @DSSWARN(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
